--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -180,9 +180,10 @@
                                             <li role="menuitem" class="static" style="position: relative; float: left;">
                                                 <a title="How to get in contact with us"
                                                    class="level1 MPAuxNav static"
-                                                   href="/contactus" tabindex="-1">Contact Us</a></li>
+                                                   [routerLink]="['/contactus']" tabindex="-1">Contact Us</a></li>
                                             <li role="menuitem" class="static" style="position: relative; float: left;">
-                                                <a class="level1 MPAuxNav static" href="/careercenter"
+                                                <a class="level1 MPAuxNav static"
+                                                   [routerLink]="['/careercenter']"
                                                    target="_blank"
                                                    tabindex="-1">Career Center</a>
                                             </li>
