--- a/src/app/components/core/pages-navbar/pages-navbar.component.html
+++ b/src/app/components/core/pages-navbar/pages-navbar.component.html
@@ -161,14 +161,19 @@
                                 <div cssselectorclass="MPAuxNav" id="AuxMenu" style="float: left;">
                                     <ul class="level1 static" tabindex="0" role="menubar"
                                         style="position: relative; width: auto; float: left;">
+                                        <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <a title="How to get in contact with us"
+                                               class="level1 MPAuxNav static"
+                                               [routerLink]="['/contactus']" tabindex="-1">Contact Us</a></li>
+                                        <li role="menuitem" class="static" style="position: relative; float: left;">
+                                            <a class="level1 MPAuxNav static"
+                                               [routerLink]="['/careercenter']"
+                                               target="_blank"
+                                               tabindex="-1">Career Center</a>
+                                        </li>
                                         <li role="menuitem" class="static" style="position: relative; float: left;"><a
-                                                title="How to get in contact with us" class="level1 MPAuxNav static"
-                                                href="/contactus" tabindex="-1">Contact Us</a></li>
-                                        <li role="menuitem" class="static" style="position: relative; float: left;"><a
-                                                class="level1 MPAuxNav static" href="/careercenter" target="_blank"
-                                                tabindex="-1">Career Center</a></li>
-                                        <li role="menuitem" class="static" style="position: relative; float: left;"><a
-                                                class="level1 MPAuxNav static" href="http://blog.ddw.org"
+                                                class="level1 MPAuxNav static"
+                                                href="http://blog.ddw.org"
                                                 target="_blank"
                                                 tabindex="-1">DDW
                                             Blog</a></li>
