--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.css
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.css
@@ -7,4 +7,5 @@ h1, h2, h3, h4, h5, h6, p, div, tr, th, tr, td, span, ul, ol, li {
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
     line-height: 1.7;
     font-size: 1em;
+    border-radius: 0;
 }
