--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
@@ -56,11 +56,15 @@
                         <td scope="col" class="text-truncate">
                             {{ contact.sentDate | date:'mediumDate' }}
                         </td>
-                        <td>
+                        <td class="text-center">
                             <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
                                [routerLink]="['/admin/contacts/', contact.$key]">
                                 <i class="fa fa-glasses"></i>&nbsp;
                             </a>
+                            <!--<a class="btn btn-danger btn-sm icon-btn md-btn-flat user-tooltip ml-3"-->
+                               <!--(click)="onDeleteContact(contact.$key)">-->
+                                <!--<i class="fal fa-trash text-white"></i>-->
+                            <!--</a>-->
                         </td>
                     </tr>
                     </tbody>
