--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.css
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.css
@@ -8,6 +8,14 @@ a.sidenav-link {
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
 }
 
+a:link {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+}
+
+.helv {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+}
+
 li.sidenav-item {
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
     font-size: 1em;
