--- a/src/app/components/core/contact-us/contact-us.component.html
+++ b/src/app/components/core/contact-us/contact-us.component.html
@@ -93,10 +93,10 @@
                             </div>
 
                             <div class="form-group">
-                                <label>Message</label>
+                                <label>body</label>
                                 <textarea class="form-control"
                                           rows="10"
-                                          formControlName="message">
+                                          formControlName="body">
                                </textarea>
                             </div>
 
