--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.css
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.css
@@ -9,3 +9,13 @@ h1, h2, h3, h4, h5, h6, p, div, tr, th, tr, td, span, ul, ol, li {
     font-size: 1em;
     border-radius: 0;
 }
+
+a.text-dark:hover {
+    color: #44484f!important;
+}
+
+.viewed {
+    background-color: #FFF3CF !important;
+    color: #5C440F;
+    border: 1px solid #EDE1C1;
+}
