--- a/src/app/components/core/contact-us/contact-us.component.html
+++ b/src/app/components/core/contact-us/contact-us.component.html
@@ -93,7 +93,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label>body</label>
+                                <label>Body</label>
                                 <textarea class="form-control"
                                           rows="10"
                                           formControlName="body">
