--- a/src/styles.css
+++ b/src/styles.css
@@ -71,7 +71,7 @@ p.alert, .flash-messages * {
 }
 
 .btn-default {
-    color: #282E3E;
+    /*color: #282E3E;*/
     /*background: #9d9fa1;*/
 }
 
@@ -446,85 +446,85 @@ table.ddw1 td {
 }
 
 /* Colin's Searchbar updates */
-.cse .gsc-control-cse, .gsc-control-cse {
-    font-family: Arial, sans-serif;
-    background-color: transparent !important;
-    border: transparent !important;
-}
+/*.cse .gsc-control-cse, .gsc-control-cse {*/
+    /*font-family: Arial, sans-serif;*/
+    /*background-color: transparent !important;*/
+    /*border: transparent !important;*/
+/*}*/
 
-button.gsc-search-button.gsc-search-button-v2 {
-    font-size: 0px;
-    padding: 6px 27px;
-    width: auto;
-    vertical-align: middle;
-    border: transparent;
-    border-radius: 2px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    margin-top: 2px;
-    /* border-color: #000; */
-    background-color: transparent;
-    /* background-image: -webkit-gradient(linear,left top,left bottom,from(#333333),to(#333333)); */
-    background-image: none;
-}
+/*button.gsc-search-button.gsc-search-button-v2 {*/
+    /*font-size: 0px;*/
+    /*padding: 6px 27px;*/
+    /*width: auto;*/
+    /*vertical-align: middle;*/
+    /*border: transparent;*/
+    /*border-radius: 2px;*/
+    /*-moz-border-radius: 2px;*/
+    /*-webkit-border-radius: 2px;*/
+    /*margin-top: 2px;*/
+    /*!* border-color: #000; *!*/
+    /*background-color: transparent;*/
+    /*!* background-image: -webkit-gradient(linear,left top,left bottom,from(#333333),to(#333333)); *!*/
+    /*background-image: none;*/
+/*}*/
 
-/* Use a different font family for search results */
-.gs-title, .gs-snippet {
-    font-family: "Helvetica Neue", sans-serif;
-}
+/*!* Use a different font family for search results *!*/
+/*.gs-title, .gs-snippet {*/
+    /*font-family: "Helvetica Neue", sans-serif;*/
+/*}*/
 
-/* Add a border between individual search results */
-.gs-webResult {
-    border: transparent;
-    padding: 1em;
-}
+/*!* Add a border between individual search results *!*/
+/*.gs-webResult {*/
+    /*border: transparent;*/
+    /*padding: 1em;*/
+/*}*/
 
-/* Do no display the count of search results */
-.gsc-result-info {
-    display: none;
-}
+/*!* Do no display the count of search results *!*/
+/*.gsc-result-info {*/
+    /*display: none;*/
+/*}*/
 
-/* Hide the Google branding in search results */
-.gcsc-branding {
-    display: none;
-}
+/*!* Hide the Google branding in search results *!*/
+/*.gcsc-branding {*/
+    /*display: none;*/
+/*}*/
 
-/* Hide the thumbnail images in search results */
-.gsc-thumbnail {
-    display: none;
-}
+/*!* Hide the thumbnail images in search results *!*/
+/*.gsc-thumbnail {*/
+    /*display: none;*/
+/*}*/
 
-/* Hide the snippets in Google search results */
-.gs-snippet {
-    display: none;
-}
+/*!* Hide the snippets in Google search results *!*/
+/*.gs-snippet {*/
+    /*display: none;*/
+/*}*/
 
-/* Change the font size of the title of search results */
-.gs-title a {
-    font-size: 16px;
-}
+/*!* Change the font size of the title of search results *!*/
+/*.gs-title a {*/
+    /*font-size: 16px;*/
+/*}*/
 
-/* Change the font size of snippets inside search results */
-.gs-snippet {
-    font-size: 14px;
-}
+/*!* Change the font size of snippets inside search results *!*/
+/*.gs-snippet {*/
+    /*font-size: 14px;*/
+/*}*/
 
-/* Google Custom Search highlights matching words in bold, toggle that */
-.gs-title b, .gs-snippet b {
-    font-weight: normal;
-}
+/*!* Google Custom Search highlights matching words in bold, toggle that *!*/
+/*.gs-title b, .gs-snippet b {*/
+    /*font-weight: normal;*/
+/*}*/
 
-/* Do no display the URL of web pages in search results */
-.gsc-url-top, .gsc-url-bottom {
-    display: none;
-}
+/*!* Do no display the URL of web pages in search results *!*/
+/*.gsc-url-top, .gsc-url-bottom {*/
+    /*display: none;*/
+/*}*/
 
-/* Highlight the pagination buttons at the bottom of search results */
-.gsc-cursor-page {
-    font-size: 1.5em;
-    padding: 4px 8px;
-    border: 2px solid #ccc;
-}
+/*!* Highlight the pagination buttons at the bottom of search results *!*/
+/*.gsc-cursor-page {*/
+    /*font-size: 1.5em;*/
+    /*padding: 4px 8px;*/
+    /*border: 2px solid #ccc;*/
+/*}*/
 
 
 /* Cavin's Custom */
