--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.css
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.css
@@ -16,6 +16,10 @@ a.text-dark:hover {
 
 .viewed {
     background-color: #FFF3CF !important;
-    color: #5C440F;
+    color: #5C440F !important;
     border: 1px solid #EDE1C1;
+}
+
+a.viewed-text {
+    color: #5C440F !important;
 }
