--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
@@ -1,5 +1,5 @@
 <!-- * ADMIN-CONTACT-US-LIST * -->
-<div class="row mb-5 mt-3">
+<div class="row mb-3 mt-3">
     <div class="col-md-6 mx-auto">
         <div class="card">
             <div class="card-body">
@@ -62,7 +62,7 @@
                             <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
                                matTooltip="View contact details"
                                [routerLink]="['/admin/contacts/', contact.$key]">
-                                <i class="fa fa-pencil-alt"></i>&nbsp;
+                                <i class="fa fa-address-book"></i>&nbsp;
                             </a>
                             <a class="btn btn-warning btn-sm icon-btn md-btn-flat user-tooltip ml-2"
                                *ngIf="!contact.viewed"
