Added Real Magnet Script

--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.html
@@ -47,7 +47,7 @@
                     <div class="row">
                     <div class="col-sm-12 text-center">
                         <h3 class="alert alert-warning mt-2" *ngIf="contact.viewed">
-                          <i class="fa fa-check-square"></i>&nbsp;Marked As Viewed
+                          <i class="fa fa-check-square"></i>&nbsp;Viewed
                         </h3>
                     </div>
                     </div>
