--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
@@ -20,10 +20,26 @@
     <div class="container-fluid flex-grow-1 container-p-y">
 
         <div class="card p-3">
-            <h4 class="font-weight-bold py-3 mb-4 pl-2">
-                All Contacts
-            </h4>
 
+            <div class="row">
+                <div class="col-md-8">
+                    <h4 class="font-weight-bold py-3 mb-4 pl-2">
+                        All Contacts
+                    </h4>
+                </div>
+                <div class="col-md-auto">
+                    <mat-form-field>
+                        <mat-select [(ngModel)]="selectedContactFilter"
+                                    placeholder="Sort Contacts">
+                            <mat-option *ngFor="let sort of sortOptions"
+                                        [value]="sort.value"
+                                        (click)="sortBy(selectedContactFilter)">
+                                {{ sort.type }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
 
             <div class="card-datatable table-responsive">
                 <table id="user-list" class="table table-striped table-bordered table-hover">
