--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ h1, h2, h3 {
 }
 
 .layout-container {
-    background-color: #fcfcfc !important;
+    background-color: #FAFAFA !important;
 }
 
 .admin-badge-card {
@@ -681,10 +681,8 @@ h2.card-sec-title::after {
 }
 
 .container a {
-    color: #0056b3;
+    /*color: #0056b3;*/
 }
-
-
 
 /* MOBILE */
 @media only screen and (min-width: 992px) {
